@@ -122,4 +122,4 @@ datasources:
 
 # Sets log level. The default log level is info.
 # Available log levels are: error, warning, info, debug
-#logging.level: trace
+#logging.level: info
