@@ -15,7 +15,7 @@ var DefaultAgentFleetConfig []byte
 func init() {
 	// Packed File
 	// _meta/elastic-agent.fleet.yml
-	unpacked := packer.MustUnpack("eJycVlGPo7oVfu/P2PfeEhNWS6U+xMxgzE6Yhmxs7JcK21kgsRN0E0ig6n+vbDJJZnVVXfVhpBGxz/nOd77vHP/7y7/M9lz+bavL07mRfy2r7eH820+93Z5/G4z+8vcveFiE//zh/bm/NUw4DbQ08Qm//Mk7j7/veIARp7EnB9jKAe4ECExJ1UwasscJ6TgiA37lJ06J9xbBQPibioG4wyjX3OiOr+FZ+JmHk0yrJG+FUWPULCt+SHuxhl6JNtUa6IbRoMYxSd8ayO8xEnLhKPa4O6dHjHgr0KZS6FvFQNhxow+qSDVO8iNfw5EXuVfS4CAHez72bB5mf0dBryI4qgJehJ96nK4qdthXublqXqy6yMxqYeIDpzMtDquvUbOoBA33/MexwmaqDVfH7zha7PBrduQ0+x0j3WHEB17EM06D3Xb9zI3FWFtcraCbihniKUC0aOCO0evJ4hMDNAIRrSL3/8CLfCgpAfzGiTDExyjrheEt98nAirwVYN5ZbPhyrHC0rHJEDCvISUW2N4txmSwdRgZqzcC5FTo00pCroqRj/v4rflle5OWjjnjPIwhYkbaMBju+hg0vcp9T0uHXeLVef8Jqf/N4gSuO9KiStGUH4n1gZSA+iWQ5YQNtq5Jcy92xyorld/dtgBt7LqfXWvp5ywYIOSCdiuBeADLiVzKXKOw4DbySxieM0pqBc88NqxSoLW+1aKCWh7SXDTyyAl44feYiaxjNfheAm/fKcXOrUXdlkbeMXiqF9NniFQP0GdUeRqnmJhz4euJ+S3XHh6d6ovkUA9kYq6/4JR6fuf9B43lJZzOnYTqzve5xouqyWNl+G+FbXaZaJWlgNXnTqOP0bcJYCRrP35vF1fbNeQKFvjDXnlGrwWXl8idZr4rU9qfnzQ1fkXol5TXz8/Etgk6DZZFqOUAtUDwqpHcYXdsSbCrp54Oimed8guKOR7BjdNYKIysB2KRTlLbCxFZ/4z0v2nR8WPQK6M7iksNs/v7Cuq3Rl+kMHIXVJSBks99/xVF6VEl+keOxfwPxoJA2jGaeHII7pjeT9W8g7xUITgLEezmEzTRbvjWPemGtUOU8PmHLW2nITqFwuHnMY1R3jlP0iGU9LVG8K0F84MXyOx4WFU7yWhqlVRzuLT/Mz3t5sFjxfuu7PJ2dL6zw+gf3+Yir4w5HTreut8InHkbcam8vfNUJFNYcOb1crO4YVfrGyf38e3Pzo8URLStu9Imv4YUV+dFpBb1WMiGNcL066+0aziQg+1sewIu05Qft+vSETfMI1vKQt9zEO/UUv6SsEib0PmZkWSwrmaRaTj6L77p4tXMu8HCiWoEuldXnhMfp7ldMRprwjBE5sSLzSrrsGPhWKUAaCbTH1/Mbz/Agp7x/zO3d98GF+4tHr5HupJ/XAl1/ShR7ZQT3vMh20uiGF8tb/689A7FX0rDDKDRPdywXd/7lEF6kCQ/SxGc5zKt1sXIcMHodxTBx+8jrOB44jfeTN+EggBoY9SrpQ82ANiXNaoV0Lw52rrnetuKQeda/xVTfH9Za0mBUyM4P7Dwtk7RngIxyPN57JZx+Z7WIpn2EUTATNNWygUb42GKoFQhcfdKEO15k413TaGbnurvnZsfL4rJc3PV6ZkXdioKccQJ7eVhV4kDOzJDhVvMoUewLt7ttzZmWfqblZbpv51Hhu3tuV9jYD1/aXUZ6VawqOzcxyix/3uTDQKvhE9YOJ+rI6fxR//R+6IS/qqRPdu4b4DOBrsFHrI+9rFDdyifvPc1Cz84+jMILL9KpP839XTKWNNfuXYJeK27iViRk4KupthunP90eoOFMvRyr5QjHyHr9NqffH77XwsSNQDZWrhUig+2Z0ySotdWl04/dG2uX/yL8bCxpeuLr+S97GRqrwbtXEOmYPUdXX3FiZ/PmrgtpiCeN1nIW7oTvfDtKRHYl5a3N/ehlaG6YW8f1q31rxTORTJpfDvN7zI2Nedjb99JMWD0AVi3X8Mxp3NmeqAj6Jb3anavvMak9FzzeL5S73e++IV6X9GrfOB+++Hi7jAXIekUDN/seXsvt/A9wkl04zVpu6xvg3s4Ey51o4FkOT2+P/1WX7deUc7r/4/j0zeaa1ds4/Ij9mbvHvv4/cy8un3wCprrem8VMrO66ibcJ7IUhnULa+nvPC6tJu2/J6DxR5MfpHWVn6t7FVkmqWXGb7QPUn2M8ekmA9srI7ZX7fUaDPX550s5oOVmc8Au7vEWL63L3xM8vNXETnyTYfOjy0xvsvbnpdnX8x5f//OW/AQAA////ZUbx")
+	unpacked := packer.MustUnpack("eJycV11vqzoWfZ+fcd7nDjGhOsxbTItx2tAJObWxX0bYzgESO0E3AQKj+e8jmzRJj65GV/chUmXs/bH2Wnvv/ufbv832XPxjq4vTuZZ/L8rt4fzbT73dnn8bjP72z294WIT/+uH9ud8GJpwGWpr4hJ//5Jv77xUPMOI09uQAGznAnQCBKaiaSUP2OCEtR2TAL/zEKfHeIhgI/6NkIG4xyjQ3uuUbeBZ+6uEk1SrJGmHUGNWrkh+WndhAr0Af5QbomtGgwjFZvtWQ32wkpOco9ri7p0eMeCPQR6nQ95KBsOVGH1S+1DjJjnwDR55nXkGDgxzs/dizfpj9joJORXBUOeyFv/Q4XZfssC8zc9E8X7eRmVXCxAdOZ1oc1k9RvSgFDff8x7HEZsoNl8dXHC12+CU9cpr+jpFuMeIDz+MZp8Fuu3nExsZY2bgaQT9KZoinANGihjtGLycbnxigEYhoFbm/B55nQ0EJ4FdMhCE+RmknDG+4TwaWZ40A89bGhvtjiaNVmSFiWE5OKrK1WYyrZOViZKDSDJwboUMjDbkoSlrm75/w86qX/Wce8Z5HELB82TAa7PgG1jzPfE5Ji1/i9WbzJVb7zeM5LjnSo0qWDTsQ7zNWBuKTSFZTbKBpVJJpuTuWab56dWcD/LD3MnqppJ81bICQA9KqCO4FICN+IXOJwpbTwCtofMJoWTFw7rhhpQKVxa0SNdTysOxkDY8shz2nj1ikNaPp7wJw8146bK456rbIs4bRvlRIn228YoA+o9rDaKm5CQe+mbDfUt3y4SGfaD7ZQNbG+gk/x+Mj9j9oPC/obOY4TGe21h1OVFXka1tvI3zLy6VWyTKwnLxy1GH6NsVYChrP3+vFxdbNaQKFvjCXjlHLwVXp/Cdpp/KlrU/H62t8+dIrKK+Yn41vEXQcLPKllgPUAsWjQnqH0aUpwEcp/WxQNPWcTlDc8gi2jM4aYWQpAJt4ipaNMLHl33jziz5aPiw6BXRr45LDbP7+zNqt0f10B47C8hIQ8rHfP+FoeVRJ1svx2L2BeFBIG0ZTTw7BLaY3k3ZvIOsUCE4CxHs5hPXUW77X93xhpVDpND7FljXSkJ1C4XDVmMeobh2m6G7LalqieFeA+MDz1SseFiVOskoapVUc7i0+zM86ebCx4v3Wd35a219Y7nV37LMRl8cdjhxvXW2FTzyMuOXeXviqFSisOHJ86S3vGFX6isnt/nt91aONI1qV3OgT38Ce5dnRcQW9lDIhtXC1OuvtBs4kIPurH8DzZcMP2tXpITbNI1jJQ9ZwE+/Ug/2CslKY0PvskUW+KmWy1HLSWXzjxYvtc4GHE9UI1JeWn1M8jne/xmSkCc8YkRPLU6+gq5aB76UCpJZAe3wzv+IMD3Ly+8fY3nQf9Nxf3GuNdCv9rBLo8lOi2CsiuOd5upNG1zxfXet/6RiIvYKGLUaheXhjsbjhL4ewlyY8SBOf5TAvN/naYcDoZRTDhO3dr8N44DTeT9qEgwBqYNQrpQ81A9oUNK0U0p042L7matuIQ+pZ/eZTfn+Ya0GDUSHbP7DTtEyWHQNklOPxVivh+DurRDTNI4yCmaBLLWtohI9tDJUCgctPmnDH83S8cRrNbF9371zveF70q8WNr2eWV43IyRknsJOHdSkO5MwMGa45jxLFvnCz2+acaumnWvbTe9uPct+9c7PC2r7r0s4y0ql8Xdq+iVFq8fMmHQZaDV9ibXGijpzO7/lP+0Mr/HUpfbJzZ4DPBLoEn7Y+57JCVSMftPfQCz3b+zAKe54vp/rUt71kLGim3V6CXkpu4kYkZODrKbcrpj/dHKDhTD0fy9UIx8hq/dqn3++618LEtUDWVqYVIoOtmeMkqLTlpeOPnRsb578XfjoWdHnim/kvcxkay8GbVhBpmb1H1084sb3548YLaYgnjdZyFu6E73Q7SkR2BeWN9X2vZWiuMTcO6xe7a8UzkUycXw3zm80Pa/Owt/vSTFg+AFauNvDMadzamqgI+gW92JmrbzapvRfc9xfK3ex3Z4hXBb3YHedTF5+7y5iDtFM0cL3vrrXM9v8AJ2nPadpwm98A97YnWOxEDc9yeNg9/l9etl6Tz+n9j+PDmfU1q7Zx+Gn7K3b3ef0XfS/6LzoBU17v9WIm1jfexNsEdsKQViFt9b3nueWknbdkdJrIs+O0R9meune2VbLULL/29gHqrzbutSRAe0Xk5srtPaPBHj8/cGe0mCxO+Jn1b9Histo94PNLTtzEJwk+Pnn5ZQd7r6+8Xdu+BX/wPBttL+YDPPGcaxHNSzLN55tNgcIDRhetDDlht6/rlpvvjifr3PGmYuaiv9hJph39/bbf9aUC8SDs/w5DXxY0MGLobb61ovIVg0vHgbJzsRWIAE77p6uf12///dv/AgAA///mG4Po")
 	raw, ok := unpacked["_meta/elastic-agent.fleet.yml"]
 	if !ok {
 		// ensure we have something loaded.
